feat/i11 :recycle: Refatora validação de dados do usuário
A lógica de validação dos dados do usuário foi refatorada para o método checkNotNullAndNotEmptyOrThrowException. Esse método genérico elimina a repetição de código verificando a nulidade e o vazio de objetos e strings, respectivamente, aumentando a concisão e a clareza do código. Agora, as exceções UserCreationFailureException são jogadas a partir deste método centralizado ao invés de várias partes do código.